# txgraph

./: .envrc  .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
assets/: main.js
gui/: Cargo.toml  index.html
gui/src/: annotations.rs  app.rs  bezier.rs  bitcoin.rs  components.rs  graph.rs  lib.rs  main.rs  style.rs  transform.rs
server/: Cargo.toml
server/src/: error.rs  lib.rs  main.rs  server.rs  store.rs
src/: account.rs  annotations.rs  app.rs  bezier.rs  bitcoin.rs  client.rs  db.rs  export.rs  flight.rs  force.rs  framerate.rs  graph.rs  layout.rs  lib.rs  loading.rs  main.rs  modal.rs  notifications.rs  platform.rs  projects.rs  style.rs  transform.rs  tx_cache.rs  widgets.rs  workspaces.rs
src/components/: about.rs  custom_tx.rs  mod.rs
src/fonts/: include-text.txt  include-unicodes.txt  private-build-plans.toml
src/shaders/: repulsive_force.glsl  vertex.glsl
