[package]
name = "coin_tracker"
version = "0.1.0"
authors = ["Moritz Drexl <mdrexl@fastmail.fm>"]
edition = "2021"
rust-version = "1.65"

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [ "default_fonts", "glow", "persistence" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3"
hyper = { version = "0.14", features = [ "full" ] }
tokio = { version = "1.27.0", features = [ "full" ] }
hex = "0.4.3"
chrono = "0.4.24"
